--- a/portfolio-template/index.html
+++ b/portfolio-template/index.html
@@ -38,7 +38,7 @@
         <div class="wrapper">
             
 			<div class="logo-container">
-				<h1>Tevin<br>philip<br>Portfolio</h1>
+				<h1>PES2UG23CS650<br><br>Portfolio</h1>
 
 				<!-- ------------------------------------------------------
 				Note that the image of the logo is linked to the home page.
